# IGR205_Project

./: .gitignore  README.md  finn.shape  four.shape  pipeline.md
media/models/geometry_triangle/: r2.off  seashell.off  tetra.off
src/: CMakeLists.txt  main.cpp
src/base/: animation.cpp  animation.hpp  base.cpp  base.hpp  camera-controller.cpp  camera-controller.hpp  camera.cpp  camera.hpp  drawing.hpp  frame-buffer.cpp  frame-buffer.hpp  light.cpp  light.hpp  mesh-geometry.cpp  mesh-geometry.hpp  mesh-group.hpp  mesh-material.cpp  mesh-material.hpp  mesh-skeleton.cpp  mesh-skeleton.hpp  mesh.cpp  mesh.hpp  program.cpp  program.hpp  texture.cpp  texture.hpp  utils.hpp
src/base/geometry/: draw-2d.cpp  draw-2d.hpp  geometry.cpp  geometry.hpp
src/base/modeling/: chords-generator.hpp  cylinder-generator.cpp  cylinder-generator.hpp  cylindrical-douglas-peucker.cpp  cylindrical-douglas-peucker.hpp  delaunay.cpp  delaunay.hpp  medial-axis-generator.cpp  medial-axis-generator.hpp  medial-axis.cpp  medial-axis.hpp  mesh-generator.cpp  mesh-generator.hpp  operations.cpp  operations.h  pipeline-skeleton-generator.hpp  pipeline.cpp  pipeline.hpp  remeshing.hpp  rigging-mesh.hpp  rigging.cpp  rigging.hpp  shape.hpp  skeleton-generator.cpp  skeleton-generator.hpp  skeleton.hpp  skining-generator.cpp  skining-generator.hpp  smoothing.cpp  smoothing.h  smoothing.hpp
src/dep/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
src/dep/glfw/src/: Makefile  cmake_install.cmake
src/dep/jc_voronoi/: jc_voronoi_clip.h
src/dep/vcg/vcg/complex/algorithms/: isotropic_remeshing.h
src/shaders/: coverFragment.glsl  coverVertex.glsl  drawingFragmentShader.glsl  drawingVertexShader.glsl  drawingWorldVertexShader.glsl  phongFragmentShader.glsl  phongVertexShader.glsl  shadowMapFragmentShader.glsl  shadowMapVertexShader.glsl  singleColorFragmentShader.glsl  singleColorVertexShader.glsl
